# MEI

./: .gitignore  README.md
1y/1s/ascn/: README.md
1y/1s/ascn/pl2/: Vagrantfile  hosts.ini
1y/1s/ascn/pl4/: hosts.ini  playbook.yml
1y/1s/calendar/: calendar.md  calendar2md.py  entries.csv
1y/1s/cp/: README.md
1y/1s/cp/hw1/: res.md
1y/1s/cp/pl1/: PL01_answers.md
1y/1s/cp/pl2/: res.md
1y/1s/cp/pl3/: res.md
1y/1s/cp/pl4/: res.md
1y/1s/cp/pl5/: res.md
1y/1s/cp/pl6/: res.md
1y/1s/cp/pl7/: res.md
1y/1s/cp/pl8/: res.md
1y/1s/cp/pl9/: res.md
1y/1s/daa/: README.md
1y/1s/daa/pl2/: pl2.ipynb  sentiment_analysis.csv
1y/1s/daa/pl3/: CallsData.csv  CallsData.xls  ContractData.csv  pl3.ipynb
1y/1s/daa/pl4/: pl4.ipynb
1y/1s/daa/pl5/: pl5.ipynb
1y/1s/daa/pl6/: College_Data.csv  pl6_ficha.ipynb  pl6_slides.ipynb
1y/1s/daa/pl7/: pl7.ipynb
1y/1s/esr/: README.md
1y/1s/mfes/: README.md
1y/1s/mfes/f1/: IN  OUT  ex2.txt  ex5.txt  res.md
1y/1s/mfes/f2/: res.md
1y/1s/mfes/f3/: res.md
1y/1s/mfes/f4/: courses.md  instagram.als  instagram.md  (+2 more)
1y/1s/ras/: README.md
1y/1s/schedule/: schedule_1y_1s.tex
1y/2s/csi/: CSI_miniteste_18_19.md  CSI_miniteste_19_20.md  CSI_miniteste_20_21.md  CSI_teste_19_20.md  README.md  solving_exercises.md
1y/2s/pcf/: README.md
1y/2s/psd/: README.md  zeromq-examples.tgz
1y/2s/psd/zmq_warm_up/: Cargo.toml
1y/2s/psd/zmq_warm_up/src/: c.rs  f.rs  g.rs  s.rs
1y/2s/schedule/: schedule_1y_2s.tex
1y/2s/sdge/: .gitignore  README.md
1y/2s/tf/: README.md
1y/2s/vf/: .gitignore  README.md  why3session.xml
(+205 files in other folders)
